# HRNET_rknn

./: .gitignore  readme.md
code/: test_one_image.py  to_onnx.py
code/config/: w18_256x192_adam_lr1e-3.yaml
code/rknn/inference/rknn_hrnet/: CMakeLists.txt  README.md  build.sh
code/rknn/inference/rknn_hrnet/src/: main.cc
code/rknn/transModel/: dataset.txt  resizeImg.py  to_rknn.py
code/utils/: transforms.py  vis.py
